--- a/index.html
+++ b/index.html
@@ -157,13 +157,14 @@ tr.detail-row td{padding:4px 14px 18px 14px}
       </div>
     </div>
     <div class="rating-legend">
-      <strong>Rating scale:</strong>
-      <span><span class="se">★</span> Weak fit</span>
-      <span><span class="se">★★</span> Possible</span>
-      <span><span class="se">★★★</span> Good fit</span>
-      <span><span class="se">★★★★</span> Strong fit</span>
-      <span><span class="se">★★★★★</span> Must include</span>
-    </div>
+      <div class="rating-legend">
+  <strong>Rating scale:</strong>
+  <span><span class="star-example">★</span> = Least preferred</span>
+  <span><span class="star-example">★★</span> = Low preference</span>
+  <span><span class="star-example">★★★</span> = Neutral</span>
+  <span><span class="star-example">★★★★</span> = High preference</span>
+  <span><span class="star-example">★★★★★</span> = Top choice</span>
+</div>
   </div>
   <div class="filter-bar">
     <div class="search-wrap">
