--- a/index.html
+++ b/index.html
@@ -158,13 +158,14 @@ tr.detail-row td{padding:4px 14px 18px 14px}
     </div>
     <div class="rating-legend">
       <div class="rating-legend">
-  <strong>Rating scale:</strong>
-  <span><span class="star-example">★</span> = Least preferred</span>
-  <span><span class="star-example">★★</span> = Low preference</span>
-  <span><span class="star-example">★★★</span> = Neutral</span>
-  <span><span class="star-example">★★★★</span> = High preference</span>
-  <span><span class="star-example">★★★★★</span> = Top choice</span>
-</div>
+        <strong>Rating scale:</strong>
+        <span><span class="star-example">★</span> = Least preferred</span>
+        <span><span class="star-example">★★</span> = Low preference</span>
+        <span><span class="star-example">★★★</span> = Neutral</span>
+        <span><span class="star-example">★★★★</span> = High preference</span>
+        <span><span class="star-example">★★★★★</span> = Top choice</span>
+      </div>
+    </div>
   </div>
   <div class="filter-bar">
     <div class="search-wrap">
@@ -210,8 +211,9 @@ tr.detail-row td{padding:4px 14px 18px 14px}
     <span class="lr">Click any row for detail + notes</span>
   </div>
 </div>
+
 <script>
-const API='https://script.google.com/macros/s/AKfycbzG6LWzwYWZDciPX-SEKhrL2IrdieHEGLBogEve6d1OT--xOWyKAbUH76xifAM6dYKI/exec';
+const API = "https://script.google.com/macros/s/AKfycby1cSVwTV6iXg4Yn_KLTeHlwn-QdKBKsEFstB9zABMiiqHxOcNk7U_rm6VeDwQgF8g7/exec";
 const PAL=['#C25178','#3A8FBF','#5E9E5E','#9B6EC5','#D4853A','#4A8F8F','#C4564A','#7B8EC2'];
 const DC={Healthcare:'health',Business:'biz',Education:'edu',IT:'it'};
 const CASES=[
@@ -283,21 +285,70 @@ function showRet(){
 
 document.getElementById('loginInput').addEventListener('input',e=>{document.getElementById('loginBtn').disabled=!e.target.value.trim()});
 
-function setSS(t,c){const e=document.getElementById('syncSt');e.textContent=t;e.className='sync-status '+c;if(c==='saved')setTimeout(()=>{e.textContent=''},3000)}
-
-async function loadRanks(){
-  setSS('Loading...','saving');
-  try{
-    const r=await fetch(API+'?action=load');const d=await r.json();
-    ranks={};d.forEach(x=>{ranks[rk(x.caseId,x.reviewer)]={rating:x.rating,notes:x.notes||''}});
-    updReviewers();setSS('Synced','saved');render();
-  }catch(e){setSS('Could not load \u2014 offline','error');updReviewers();render()}
+function setSS(t,c){
+  const e=document.getElementById('syncSt');
+  e.textContent=t;
+  e.className='sync-status '+c;
+  if(c==='saved')setTimeout(()=>{e.textContent=''},3000)
 }
 
+/* ============================================================
+   ✅ UPDATED: loadRanks() uses JSONP to avoid CORS on GitHub Pages
+   ============================================================ */
+function loadRanks(){
+  setSS('Loading...','saving');
+
+  const cbName = 'cs_cb_' + Date.now();
+
+  window[cbName] = function(d){
+    try{
+      ranks = {};
+      (d || []).forEach(x=>{
+        ranks[rk(x.caseId, x.reviewer)] = { rating: x.rating || 0, notes: x.notes || '' };
+      });
+      updReviewers();
+      setSS('Synced','saved');
+      render();
+    }catch(err){
+      setSS('Could not load — offline','error');
+      updReviewers();
+      render();
+    }finally{
+      delete window[cbName];
+      const s = document.getElementById(cbName);
+      if (s) s.remove();
+    }
+  };
+
+  const s = document.createElement('script');
+  s.id = cbName;
+  s.src = API + '?action=load&callback=' + cbName;
+  s.onerror = () => {
+    setSS('Could not load — offline','error');
+    delete window[cbName];
+    s.remove();
+    updReviewers();
+    render();
+  };
+
+  document.body.appendChild(s);
+}
+
+/* ============================================================
+   ✅ UPDATED: saveRank() uses mode:'no-cors' to avoid CORS on POST
+   ============================================================ */
 async function saveRank(cid,rev,rat,notes){
   setSS('Saving...','saving');
-  try{await fetch(API+'?action=save',{method:'POST',body:JSON.stringify({caseId:cid,reviewer:rev,rating:rat,notes:notes})});setSS('Saved \u2713','saved')}
-  catch(e){setSS('Save failed','error')}
+  try{
+    await fetch(API+'?action=save',{
+      method:'POST',
+      mode:'no-cors',
+      body: JSON.stringify({caseId:cid,reviewer:rev,rating:rat,notes:notes})
+    });
+    setSS('Saved ✓','saved');
+  }catch(e){
+    setSS('Save failed','error');
+  }
 }
 
 function setRat(cid,rat,ev){
